# multimodal-embedding-playground

./: .gitignore  README.md  main.py  pyproject.toml  rerun.txt
.github/: copilot-instructions.md
src/core/entities/: reference_product.py
src/core/utils/: download_pdp_jsons.py  image_preprocessing.py  reference_product_loader.py  scrapped_listing_sampler.py  text_normalizer.py
src/embedding/services/: image_embedder.py  llm_evaluation.py  llm_evaluation_processor.py  text_embedder.py  text_embedding_processor.py
src/infra/config/: embedding_models.yml  production.yml
src/infra/embeddings_models/: dino.py  fashion_clip.py  openai_text.py
src/infra/llm/: teste.py
src/infra/llm/prompt/: prompt.md
src/infra/llm/providers/: gemini.py
src/infra/llm/usage_logs/: usage_20260414_145854.json  usage_20260414_145854.jsonl  usage_totals.json
src/infra/vector_db/: faiss.py
src/pipeline/: run_download_pdp_output.py  run_llm_evaluation.py  run_reference_indexing.py  run_retrieval_evaluation.py  run_retrieval_strategy_comparison.py  run_usage_log_structuring.py  test_scrapped_listing_retrieval.py
